--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,10 @@ email: your-email@domain.com
 url: https://example.github.io
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
 
-# Contact form: comment the line below if you want to stick with the default PHP contact form
-contact: static
+content:
+  - html: portfolio_grid
+  - html: about
+  - html: contact_static
 
 # Color settings (hex-codes without the leading hash-tag)
 color:
@@ -40,6 +42,11 @@ address:
 
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
+
+defaults:
+  -
+    values:
+      icon: "star"
 
 # Build settings
 markdown: kramdown
