--- a/_config.yml
+++ b/_config.yml
@@ -6,14 +6,14 @@ description: "Write an awesome description for your new site here. You can edit 
 
 content:
   - html: portfolio_grid
+    navtitle: Portfolio
+    id: portfolio
   - html: about
+    navtitle: About
+    id: about
   - html: contact_static
-
-# Color settings (hex-codes without the leading hash-tag)
-color:
-  primary: 18bc9c #80B3FF
-  secondary: 2c3e50 #FD6E8A
-  secondary-dark: 233140 #A2122F
+    navtitle: Contact
+    id: contact
 
 # Footer settings
 footer:
@@ -43,11 +43,23 @@ address:
 # Credits content
 credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
 
+# Build settings
 defaults:
   -
     values:
       icon: "star"
 
-# Build settings
+gems: [jekyll-assets]
+
+sass:
+    sass_dir: _sass
+    style: compressed
+
+assets:
+  sources:
+    - _assets/fonts
+    - _assets/javascripts
+    - _assets/stylesheets    
+
 markdown: kramdown
 permalink: pretty
