--- a/_config.yml
+++ b/_config.yml
@@ -3,24 +3,7 @@ title: Freelancer
 email: your-email@domain.com
 url: https://example.github.io
 description: "Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description."
-
-content:
-  - html: portfolio_grid
-    navtitle: Portfolio
-    id: portfolio
-  - html: about
-    navtitle: About
-    id: about
-  - html: contact_static
-    navtitle: Contact
-    id: contact
-
-# Footer settings
-footer:
-  copyright: Dr. Henry Jekyll
-  location: Location
-  social: Around the Web
-  credits: Credits
+copyright: Dr. Henry Jekyll
 
 # Social networks usernames (many more available: google-plus, flickr, dribbble, pinterest, instagram, tumblr, linkedin, etc.)
 social:
@@ -40,14 +23,29 @@ address:
   - line: 3481 Melrose Place
   - line: Beverly Hills, CA 90210
 
-# Credits content
-credits: 'Freelancer is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.'
-
 # Build settings
 defaults:
   -
+    scope:
+      path: ""
     values:
       icon: "star"
+  -
+    scope:
+      path: ""
+      type: "homepage"
+    values:
+      theme: "primary"
+  -
+    scope:
+      path: ""
+      type: "footer"
+    values:
+      colsize: "col-md-4"
+
+collections:
+  - homepage
+  - footer
 
 gems: [jekyll-assets]
 
