Exclude GitHub-related files

--- a/_config.yml
+++ b/_config.yml
@@ -63,5 +63,7 @@ assets:
     - _assets/stylesheets
     - _assets/images  
 
+exclude: [README.md, LICENCE, screenshot.png]
+
 markdown: kramdown
 permalink: pretty
