--- a/_config.yml
+++ b/_config.yml
@@ -63,7 +63,7 @@ assets:
     - _assets/stylesheets
     - _assets/images  
 
-exclude: [README.md, LICENCE, screenshot.png]
+exclude: [README.md, LICENSE, screenshot.png]
 
 markdown: kramdown
 permalink: pretty
